@@ -1,3 +1,6 @@
+2011-03-06  6.6.8-2 Cristy  <quetzlzacatenango@image...>
+  * Support the Radiance HDR image format.
+
 2011-03-06  6.6.8-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.8-1.
 
